8204160: BiasedLockingTest needs -XX:+UseBiasedLocking
Reviewed-by: eosterlund, dholmes